--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,12 @@ timezone: Asia/Shanghai
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Wangbard's Blog # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: 小舟从此逝，江海寄馀生。 # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  A blog sharing insights and explorations in quantum computing, cryptography, mathematics, and computer science, with occasional deep dives into other intriguing subjects.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -42,11 +42,11 @@ social:
     - https://github.com/wangbard # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://www.linkedin.com/in/username
 
 # Site Verification Settings
 webmaster_verifications:
-  google: google-site-verification=J8CAcwTPvs7IHAVpt-f1e5YsZRRD-jdtQIBYauYYl3A# fill in your Google verification code
+  google: google-site-verification=J8CAcwTPvs7IHAVpt-f1e5YsZRRD-jdtQIBYauYYl3A # fill in your Google verification code
   bing: # fill in your Bing verification code
   alexa: # fill in your Alexa verification code
   yandex: # fill in your Yandex verification code
@@ -98,7 +98,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: /avatar.jpg
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
