--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -4,7 +4,8 @@
   icon: "fab fa-github"
 
 - type: linkedin
-  icon: "fab fa-linkedin"
+  icon: "fab fa-linkedin" # icons powered by <https://fontawesome.com/>
+  url: "https://www.linkedin.com/in/mingrui-zou-4401b126b" # Fill with your Linkedin homepage
 
 # - type: twitter
 #   icon: "fa-brands fa-x-twitter"
@@ -21,10 +22,6 @@
 # - type: mastodon
 #   icon: 'fab fa-mastodon'   # icons powered by <https://fontawesome.com/>
 #   url:  ''                  # Fill with your Mastodon account page, rel="me" will be applied for verification
-#
-# - type: linkedin
-#   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-#   url:  ''                  # Fill with your Linkedin homepage
 #
 # - type: stack-overflow
 #   icon: 'fab fa-stack-overflow'
